[package]
name = "garfutils"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
image = "0.24.7"
dirs-next = "2.0.0"
anyhow = "1.0.93"
comic-format = { git = "https://github.com/dxrcy/comic-format", rev = "5ac05d0" }
